[gd_scene load_steps=3 format=3 uid="uid://rubsem5ncror"]

[ext_resource type="PackedScene" uid="uid://c4acitghbf4a4" path="res://components/audio_player_component.tscn" id="1_g8dqs"]
[ext_resource type="Script" path="res://components/footstep_component.gd" id="1_v0gvs"]

[node name="FootstepComponent" type="Node"]
script = ExtResource("1_v0gvs")

[node name="AudioPlayerComponent" parent="." instance=ExtResource("1_g8dqs")]
volume_modifier = -12.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
